compiler/src/parser.rs
/// demoniC parser — spec 0.0.4-draft
///
/// Companion to: GRAMMAR.ebnf, SPEC.md
///
/// Hand-written recursive descent. One function per non-terminal where
/// useful; precedence ladder is one function per level (parse_logic_or,
/// parse_logic_and, …) for readability. Mirrors the structure of lexer.rs.
///
/// Pragmatic extensions to bare EBNF (documented inline at each use):
///   - shape elements may contain arithmetic exprs (`B/dp`, `H*D`)
///   - call and bracket arg lists allow named args (`dp=8`, `axis=-1`)
///   - `[T; N]` array type (Rust-style fixed-size array)
///   - `...` spread in call arg lists (lex: DotDot then Dot)
///   - `start::step` indexing shorthand (lex: ColonColon)
///   - `expr as type` postfix cast (used heavily in examples)
///
/// Pre-alpha goal: parse all 12 files in `examples/*.dmc` cleanly.

use std::fmt;

use crate::ast::*;
use crate::lexer::{Span, Token, TokenKind};

// ─── Error ───────────────────────────────────────────────────────────────────

#[derive(Debug, Clone)]
pub struct ParseError {
    pub msg: String,
    pub line: usize,
    pub col: usize,
}

impl fmt::Display for ParseError {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        write!(f, "parse error at {}:{}: {}", self.line, self.col, self.msg)
    }
}

pub type ParseResult<T> = Result<T, ParseError>;

// ─── Parser ──────────────────────────────────────────────────────────────────

pub struct Parser {
    tokens: Vec<Token>,
    pos: usize,
    struct_literal_allowed: bool,
    /// Current expression-nesting depth, bounded by `MAX_EXPR_DEPTH` so pathological
    /// input can't overflow the native stack during recursive-descent parsing (#214).
    depth: usize,
}

/// Maximum expression nesting depth. Far above anything real code reaches, far
/// below the native-stack overflow threshold — so deeply nested input gets a
/// clean parse error instead of a SIGABRT.
const MAX_EXPR_DEPTH: usize = 1024;

impl Parser {
    pub fn new(tokens: Vec<Token>) -> Self {
        Self {
            tokens,
            pos: 0,
            struct_literal_allowed: true,
            depth: 0,
        }
    }

    // ── Primitives ────────────────────────────────────────────────────────

    fn peek(&self) -> &TokenKind {
        &self.tokens.get(self.pos).map(|t| &t.kind).unwrap_or(&TokenKind::Eof)
    }

    fn peek_at(&self, offset: usize) -> &TokenKind {
        &self.tokens.get(self.pos + offset).map(|t| &t.kind).unwrap_or(&TokenKind::Eof)
    }

    fn peek_span(&self) -> Span {
        self.tokens.get(self.pos)
            .map(|t| t.span.clone())
            .unwrap_or_else(|| self.tokens.last().map(|t| t.span.clone())
                .unwrap_or(Span { start: 0, end: 0, line: 1, col: 1 }))
    }

    fn advance(&mut self) -> Token {
        let tok = self.tokens[self.pos].clone();
        if self.pos < self.tokens.len() - 1 { self.pos += 1; }
        tok
    }

    fn eat(&mut self, kind: &TokenKind) -> bool {
        if std::mem::discriminant(self.peek()) == std::mem::discriminant(kind) {
            self.advance();
            true
        } else { false }
    }

    fn expect(&mut self, kind: &TokenKind, ctx: &str) -> ParseResult<Token> {
        if std::mem::discriminant(self.peek()) == std::mem::discriminant(kind) {
            Ok(self.advance())
        } else {
            Err(self.err(format!("expected {:?} {}, found {:?}", kind, ctx, self.peek())))
        }
    }

    fn err(&self, msg: impl Into<String>) -> ParseError {
        let sp = self.peek_span();
        ParseError { msg: msg.into(), line: sp.line, col: sp.col }
    }

    fn span_from(&self, start: &Span) -> Span {
        let end = self.tokens.get(self.pos.saturating_sub(1))
            .map(|t| t.span.end).unwrap_or(start.end);
        Span { start: start.start, end, line: start.line, col: start.col }
    }

    /// Skip any consecutive Newline tokens. Newlines are statement-terminators
    /// in block context but should be ignored everywhere a stmt is *not*
    /// expected next (e.g. between fn decls, before a `}`, between match arms).
    fn skip_newlines(&mut self) {
        while matches!(self.peek(), TokenKind::Newline) { self.advance(); }
    }

    /// Like `eat`, but skips over any intervening newlines first.
    /// If the next non-newline token matches `kind`, consume the newlines and
    /// the token and return true. Otherwise leave position unchanged.
    fn eat_over_newlines(&mut self, kind: &TokenKind) -> bool {
        let saved = self.pos;
        while matches!(self.peek(), TokenKind::Newline) { self.advance(); }
        if std::mem::discriminant(self.peek()) == std::mem::discriminant(kind) {
            self.advance();
            true
        } else {
            self.pos = saved;
            false
        }
    }

    fn at_eof(&self) -> bool { matches!(self.peek(), TokenKind::Eof) }

    // ─── Entry ────────────────────────────────────────────────────────────

    pub fn parse_program(&mut self) -> ParseResult<Program> {
        let start = self.peek_span();
        let mut items = Vec::new();
        self.skip_newlines();
        while !self.at_eof() {
            items.push(self.parse_item()?);
            self.skip_newlines();
        }
        let mut program = Program { items, span: self.span_from(&start) };
        // #333: UFCS — rewrite `x.f(args)` → `f(x, args)` once, post-parse, so
        // check/interp/jit all inherit the desugared AST.
        crate::desugar::desugar_ufcs(&mut program);
        Ok(program)
    }

    // ─── Items ────────────────────────────────────────────────────────────

    fn parse_item(&mut self) -> ParseResult<Item> {
        let is_pub = self.eat(&TokenKind::Pub);
        self.skip_newlines();

        // collect leading directives (zero or more)
        let mut directives = Vec::new();
        while matches!(self.peek(), TokenKind::At) {
            // is this `@ident ...` (directive) or just `@`? At item level it's always directive.
            directives.push(self.parse_directive()?);
            self.skip_newlines();
        }

        // What if pub was specified after directives? E.g., `@pp pub fn foo()`
        let is_pub = is_pub || {
            let p = self.eat(&TokenKind::Pub);
            if p {
                self.skip_newlines();
            }
            p
        };

        let inner = match self.peek() {
            TokenKind::Fn      => Ok(Item::Fn(self.parse_fn_decl(directives)?)),
            TokenKind::Extern  => {
                if !directives.is_empty() {
                    return Err(self.err("directives on extern fn not supported"));
                }
                Ok(Item::ExternFn(self.parse_extern_fn_decl()?))
            }
            TokenKind::Model   => Ok(Item::Model(self.parse_model_decl(directives)?)),
            TokenKind::Type    => {
                if !directives.is_empty() {
                    return Err(self.err("directives on type alias not supported"));
                }
                Ok(Item::TypeAlias(self.parse_type_alias()?))
            }
            TokenKind::Enum    => {
                if !directives.is_empty() {
                    return Err(self.err("directives on enum not supported"));
                }
                Ok(Item::Enum(self.parse_enum_decl()?))
            }
            TokenKind::Vault | TokenKind::Forge | TokenKind::Stream => {
                if is_pub {
                    return Err(self.err("visibility modifier not allowed on arena blocks"));
                }
                if !directives.is_empty() {
                    return Err(self.err("directives on arena block not supported"));
                }
                Ok(Item::Arena(self.parse_arena_block()?))
            }
            TokenKind::Let     => {
                let let_stmt = self.parse_let_stmt()?;
                let span = let_stmt.span.clone();
                let item = Item::Let(let_stmt);
                if directives.is_empty() {
                    Ok(item)
                } else {
                    Ok(Item::Directive {
                        directives,
                        inner: Box::new(item),
                        span,
                    })
                }
            }
            TokenKind::Use     => {
                if is_pub {
                    return Err(self.err("visibility modifier not allowed on use statements"));
                }
                if !directives.is_empty() {
                    return Err(self.err("directives on use statement not supported"));
                }
                Ok(Item::Use(self.parse_use_stmt()?))
            }
            other => Err(self.err(format!("expected item (fn/extern/model/type/let/use/vault/forge/stream), found {:?}", other))),
        }?;

        if is_pub {
            Ok(Item::Pub(Box::new(inner)))
        } else {
            Ok(inner)
        }
    }

    fn parse_use_stmt(&mut self) -> ParseResult<UseStmt> {
        let start = self.peek_span();
        self.expect(&TokenKind::Use, "in use stmt")?;
        let path = match self.peek().clone() {
            TokenKind::StrLit(s) => {
                self.advance();
                s
            }
            other => return Err(self.err(format!("expected string literal for import path, found {:?}", other))),
        };
        let mut alias = None;
        if self.eat(&TokenKind::As) {
            alias = Some(self.expect_ident("alias name after `as`")?);
        }
        Ok(UseStmt {
            path,
            alias,
            span: self.span_from(&start),
        })
    }

    fn parse_fn_decl(&mut self, directives: Vec<Directive>) -> ParseResult<FnDecl> {
        let start = self.peek_span();
        self.expect(&TokenKind::Fn, "in fn decl")?;
        let name = self.expect_ident("fn name")?;
        let mutates_self = name.ends_with('!') || self.eat(&TokenKind::Bang);
        let shape_params = if matches!(self.peek(), TokenKind::LBracket) {
            self.parse_shape_params()?
        } else { Vec::new() };
        self.expect(&TokenKind::LParen, "before fn params")?;
        let params = if matches!(self.peek(), TokenKind::RParen) {
            Vec::new()
        } else {
            self.parse_params()?
        };
        self.expect(&TokenKind::RParen, "after fn params")?;
        let ret_type = if self.eat(&TokenKind::Arrow) {
            Some(self.parse_type()?)
        } else { None };
        let body = self.parse_block()?;
        Ok(FnDecl {
            directives, name, mutates_self, shape_params, params, ret_type, body,
            span: self.span_from(&start),
        })
    }

    fn parse_extern_fn_decl(&mut self) -> ParseResult<ExternFnDecl> {
        let start = self.peek_span();
        self.expect(&TokenKind::Extern, "in extern fn decl")?;
        // Optional ABI string: extern "cuda" fn ...
        let abi = if let TokenKind::StrLit(s) = self.peek().clone() {
            self.advance();
            Some(s)
        } else {
            None
        };
        self.expect(&TokenKind::Fn, "in extern fn decl")?;
        let name = self.expect_ident("extern fn name")?;
        let shape_params = if matches!(self.peek(), TokenKind::LBracket) {
            self.parse_shape_params()?
        } else { Vec::new() };
        self.expect(&TokenKind::LParen, "before extern fn params")?;
        let params = if matches!(self.peek(), TokenKind::RParen) {
            Vec::new()
        } else {
            self.parse_params()?
        };
        self.expect(&TokenKind::RParen, "after extern fn params")?;
        let ret_type = if self.eat(&TokenKind::Arrow) {
            Some(self.parse_type()?)
        } else { None };
        Ok(ExternFnDecl { abi, name, shape_params, params, ret_type, span: self.span_from(&start) })
    }

    fn parse_shape_params(&mut self) -> ParseResult<Vec<ShapeParam>> {
        self.expect(&TokenKind::LBracket, "in shape params")?;
        let mut out = Vec::new();
        if !matches!(self.peek(), TokenKind::RBracket) {
            loop {
                let start = self.peek_span();
                let name = self.expect_ident("shape param name")?;
                let default = if self.eat(&TokenKind::Eq) {
                    self.skip_newlines();
                    Some(self.parse_expr()?)
                } else { None };
                out.push(ShapeParam { name, default, span: self.span_from(&start) });
                if !self.eat(&TokenKind::Comma) { break; }
            }
        }
        self.expect(&TokenKind::RBracket, "after shape params")?;
        Ok(out)
    }

    fn parse_params(&mut self) -> ParseResult<Vec<Param>> {
        let mut out = Vec::new();
        loop {
            let start = self.peek_span();
            let mutating = self.eat(&TokenKind::Bang);
            let (is_self, name) = if self.eat(&TokenKind::SelfKw) {
                (true, "self".to_string())
            } else {
                (false, self.expect_ident("param name")?)
            };
            let ty = if self.eat(&TokenKind::Colon) {
                Some(self.parse_type()?)
            } else { None };
            out.push(Param { mutating, is_self, name, ty, span: self.span_from(&start) });
            // allow trailing newlines/comma; stop at )
            self.skip_newlines();
            if !self.eat(&TokenKind::Comma) { break; }
            self.skip_newlines();
            if matches!(self.peek(), TokenKind::RParen) { break; }
        }
        Ok(out)
    }

    fn parse_model_decl(&mut self, directives: Vec<Directive>) -> ParseResult<ModelDecl> {
        let start = self.peek_span();
        self.expect(&TokenKind::Model, "in model decl")?;
        let name = self.expect_ident("model name")?;
        let shape_params = if matches!(self.peek(), TokenKind::LBracket) {
            self.parse_shape_params()?
        } else { Vec::new() };
        self.expect(&TokenKind::LBrace, "before model body")?;
        let mut members = Vec::new();
        self.skip_newlines();
        while !matches!(self.peek(), TokenKind::RBrace | TokenKind::Eof) {
            members.push(self.parse_model_member()?);
            self.skip_newlines();
            // optional separating comma between fields
            if self.eat(&TokenKind::Comma) { self.skip_newlines(); }
        }
        self.expect(&TokenKind::RBrace, "after model body")?;
        Ok(ModelDecl { directives, name, shape_params, members, span: self.span_from(&start) })
    }

    fn parse_model_member(&mut self) -> ParseResult<ModelMember> {
        if matches!(self.peek(), TokenKind::Fn) {
            Ok(ModelMember::Method(self.parse_fn_decl(Vec::new())?))
        } else {
            let start = self.peek_span();
            let mutating = self.eat(&TokenKind::Bang);
            // #235: accept keyword-as-field-name (`type`, `shape`, `dtype`, …) — the
            // same set field *access* already allows. Every tokenizer's Token has a
            // `type` field; `type` is reserved (type aliases) but is fine as a member.
            let name = self.parse_field_name()?;
            self.expect(&TokenKind::Colon, "after model field name")?;
            let ty = self.parse_type()?;
            Ok(ModelMember::Field { mutating, name, ty, span: self.span_from(&start) })
        }
    }

    /// `enum Color { Red, Green, Blue }` (#336). Variants are bare identifiers,
    /// newline- or comma-separated, with an optional trailing separator.
    fn parse_enum_decl(&mut self) -> ParseResult<EnumDecl> {
        let start = self.peek_span();
        self.expect(&TokenKind::Enum, "in enum declaration")?;
        let name = self.expect_ident("enum name")?;
        self.expect(&TokenKind::LBrace, "before enum variants")?;
        self.skip_newlines();
        let mut variants: Vec<EnumVariant> = Vec::new();
        while !matches!(self.peek(), TokenKind::RBrace | TokenKind::Eof) {
            let vstart = self.peek_span();
            let vname = self.expect_ident("enum variant name")?;
            if variants.iter().any(|v| v.name == vname) {
                return Err(self.err(&format!("duplicate enum variant `{}`", vname)));
            }
            // #350 Part 2: optional positional payload `Circle(f32)` /
            // `Rect(f32, f32)`. No parens = a tag-only C-like variant (#336).
            let mut fields = Vec::new();
            if self.eat(&TokenKind::LParen) {
                self.skip_newlines();
                if matches!(self.peek(), TokenKind::RParen) {
                    return Err(self.err("payload-carrying enum variant needs at least one field type (or drop the parens for a tag-only variant)"));
                }
                loop {
                    fields.push(self.parse_type()?);
                    self.skip_newlines();
                    if !self.eat(&TokenKind::Comma) { break; }
                    self.skip_newlines();
                    if matches!(self.peek(), TokenKind::RParen) { break; }
                }
                self.expect(&TokenKind::RParen, "after enum variant payload types")?;
            }
            variants.push(EnumVariant { name: vname, fields, span: self.span_from(&vstart) });
            self.skip_newlines();
            if !self.eat(&TokenKind::Comma) { break; }
            self.skip_newlines();
        }
        self.expect(&TokenKind::RBrace, "after enum variants")?;
        if variants.is_empty() {
            return Err(self.err("enum must have at least one variant"));
        }
        Ok(EnumDecl { name, variants, span: self.span_from(&start) })
    }

    fn parse_type_alias(&mut self) -> ParseResult<TypeAlias> {
        let start = self.peek_span();
        self.expect(&TokenKind::Type, "in type alias")?;
        let name = self.expect_ident("type name")?;
        let shape_params = if matches!(self.peek(), TokenKind::LBracket) {
            self.parse_shape_params()?
        } else { Vec::new() };
        self.expect(&TokenKind::Eq, "in type alias")?;
        self.skip_newlines();
        let ty = self.parse_type()?;
        Ok(TypeAlias { name, shape_params, ty, span: self.span_from(&start) })
    }

    fn parse_arena_block(&mut self) -> ParseResult<ArenaBlock> {
        let start = self.peek_span();
        let kind = match self.advance().kind {
            TokenKind::Vault  => ArenaKind::Vault,
            TokenKind::Forge  => ArenaKind::Forge,
            TokenKind::Stream => ArenaKind::Stream,
            _ => unreachable!(),
        };
        let body = self.parse_block()?;
        Ok(ArenaBlock { kind, body, span: self.span_from(&start) })
    }

    // ─── Directives ───────────────────────────────────────────────────────

    fn parse_directive(&mut self) -> ParseResult<Directive> {
        let start = self.peek_span();
        self.expect(&TokenKind::At, "in directive")?;
        let name = self.expect_ident("directive name")?;
        let mut args = Vec::new();
        if self.eat(&TokenKind::LParen) {
            if !matches!(self.peek(), TokenKind::RParen) {
                loop {
                    args.push(self.parse_darg()?);
                    if !self.eat(&TokenKind::Comma) { break; }
                }
            }
            self.expect(&TokenKind::RParen, "after directive args")?;
        }
        Ok(Directive { name, args, span: self.span_from(&start) })
    }

    fn parse_darg(&mut self) -> ParseResult<DArg> {
        let start = self.peek_span();
        // try `ident "=" expr` first
        if matches!(self.peek(), TokenKind::Ident(_))
            && matches!(self.peek_at(1), TokenKind::Eq)
        {
            let name = self.expect_ident("darg name")?;
            self.advance(); // eat =
            self.skip_newlines();
            let value = self.parse_expr()?;
            return Ok(DArg::Named { name, value, span: self.span_from(&start) });
        }
        Ok(DArg::Positional(self.parse_expr()?))
    }

    // ─── Statements / Block ───────────────────────────────────────────────

    fn parse_block(&mut self) -> ParseResult<Block> {
        let start = self.peek_span();
        self.expect(&TokenKind::LBrace, "before block")?;
        let mut stmts = Vec::new();
        let mut tail_expr: Option<Box<Expr>> = None;
        self.skip_newlines();
        while !matches!(self.peek(), TokenKind::RBrace | TokenKind::Eof) {
            // Try to parse a stmt. Stmts that start with a keyword are
            // unambiguous. Otherwise we parse an expr; if followed by an
            // assign-op or `<-`, it's an Expr stmt; else it's the trailing
            // expression of the block.
            let stmt_start = self.peek_span();
            if let Some(s) = self.try_parse_keyword_stmt()? {
                stmts.push(s);
            } else {
                // expression — may be tail or expr-stmt
                let e = self.parse_expr()?;
                let assign = self.try_parse_assign_tail()?;
                // Detect tail: if no assign and we're at } directly (after newlines), it's tail
                self.skip_newlines();
                if assign.is_none() && matches!(self.peek(), TokenKind::RBrace) {
                    tail_expr = Some(Box::new(e));
                    break;
                }
                stmts.push(Stmt::Expr {
                    lhs: e, assign,
                    span: self.span_from(&stmt_start),
                });
            }
            // consume one terminator (semicolon or newline) then skip more
            if self.eat(&TokenKind::Semicolon) {
                self.skip_newlines();
            } else if matches!(self.peek(), TokenKind::Newline) {
                self.skip_newlines();
            } else if !matches!(self.peek(), TokenKind::RBrace) {
                // be lenient: allow no terminator if next is `}` already
                self.skip_newlines();
            }
        }
        self.expect(&TokenKind::RBrace, "after block")?;
        Ok(Block { stmts, tail_expr, span: self.span_from(&start) })
    }

    /// Returns Some(stmt) if the current token starts an unambiguous keyword-led stmt.
    fn try_parse_keyword_stmt(&mut self) -> ParseResult<Option<Stmt>> {
        let start = self.peek_span();
        let s = match self.peek() {
            TokenKind::Let      => Some(Stmt::Let(self.parse_let_stmt()?)),
            TokenKind::If       => {
                let if_e = self.parse_if_expr()?;
                Some(Stmt::If(if_e))
            }
            TokenKind::Match    => Some(Stmt::Match(self.parse_match_expr()?)),
            TokenKind::For      => Some(self.parse_for_stmt()?),
            TokenKind::While    => Some(self.parse_while_stmt()?),
            TokenKind::Loop     => Some(self.parse_loop_stmt()?),
            TokenKind::Stage    => Some(self.parse_stage_stmt()?),
            TokenKind::Break    => { self.advance(); Some(Stmt::Break(self.span_from(&start))) }
            TokenKind::Continue => { self.advance(); Some(Stmt::Continue(self.span_from(&start))) }
            TokenKind::Return   => {
                self.advance();
                let value = if matches!(self.peek(), TokenKind::Semicolon | TokenKind::Newline | TokenKind::RBrace) {
                    None
                } else { Some(self.parse_expr()?) };
                Some(Stmt::Return { value, span: self.span_from(&start) })
            }
            TokenKind::Vault | TokenKind::Forge | TokenKind::Stream
                if matches!(self.peek_at(1), TokenKind::LBrace) =>
            {
                // arena block as a statement — only when followed by `{`.
                // Otherwise `vault.zeros[...]` / `forge.reset()` etc. are
                // expressions starting with the arena keyword as a value.
                let arena = self.parse_arena_block()?;
                Some(Stmt::Expr {
                    lhs: Expr::ArenaBlock(arena),
                    assign: None,
                    span: self.span_from(&start),
                })
            }
            TokenKind::At       => {
                // directive-prefixed stmt: directives then stmt or block
                let mut directives = Vec::new();
                while matches!(self.peek(), TokenKind::At) {
                    directives.push(self.parse_directive()?);
                    self.skip_newlines();
                }
                if matches!(self.peek(), TokenKind::LBrace) {
                    let body = self.parse_block()?;
                    Some(Stmt::DirectiveBlock { directives, body, span: self.span_from(&start) })
                } else if let Some(inner) = self.try_parse_keyword_stmt()? {
                    Some(Stmt::Directive { directives, inner: Box::new(inner), span: self.span_from(&start) })
                } else {
                    // fall back to expr-stmt
                    let e = self.parse_expr()?;
                    let assign = self.try_parse_assign_tail()?;
                    Some(Stmt::Directive {
                        directives,
                        inner: Box::new(Stmt::Expr { lhs: e, assign, span: self.span_from(&start) }),
                        span: self.span_from(&start),
                    })
                }
            }
            _ => None,
        };
        Ok(s)
    }
